# image-to-text-italian-bot-public

./: Dockerfile  lambda_main.py  pyproject.toml  requirements.txt
config/: loader.py
configs/: loader.py
core/: bot_callbacks.py  bot_enums.py  llm_client.py  structured_outputs_models.py
